# RASP.Net

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Packages.props  GOVERNANCE.md  LICENSE  README.md  RELEASING.md  Rasp.sln  SECURITY.md  cliff.toml  codecov.yml  nuget.config
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  release.yml  scorecard.yml
Rasp.Core.Tests/: Rasp.Core.Tests.csproj  packages.lock.json
Rasp.Core.Tests/Context/: RaspContextTests.cs  RaspTaintSensorTests.cs
Rasp.Core.Tests/DependencyInjection/: DiSanityTests.cs
Rasp.Core.Tests/Engine/: CommandInjectionDetectionEngineTests.cs  PathTraversalDetectionEngineTests.cs  SqlInjectionDetectionEngineTests.cs  SsrfDetectionEngineTests.cs
Rasp.Core.Tests/Guard/: SqlSinkGuardTaintTests.cs
Rasp.Core.Tests/Infrastructure/: RaspAlertBusTests.cs
Rasp.Instrumentation.AdoNet.Tests/: Rasp.Instrumentation.AdoNet.Tests.csproj  RaspAdoNetTests.cs  packages.lock.json
Rasp.Instrumentation.AspNetCore.Tests/: Rasp.Instrumentation.AspNetCore.Tests.csproj  RaspContextMiddlewareTests.cs  packages.lock.json
Rasp.Instrumentation.EntityFrameworkCore.Tests/: Rasp.Instrumentation.EntityFrameworkCore.Tests.csproj  RaspEntityFrameworkIntegrationTests.cs  SqlSinkDetectionEngineTests.cs  packages.lock.json
Rasp.Instrumentation.Grpc.Tests/: GrpcCorrelationTests.cs  GrpcInterceptorTests.cs  GrpcMultiServiceCorrelationTests.cs  GrpcTaintPropagationTests.cs  Rasp.Instrumentation.Grpc.Tests.csproj  packages.lock.json
Rasp.Instrumentation.Grpc.Tests/Protos/: test.proto
Rasp.Instrumentation.HttpClient.Tests/: CachingDnsResolverTests.cs  Rasp.Instrumentation.HttpClient.Tests.csproj  RaspHttpClientTests.cs  packages.lock.json
Rasp.Instrumentation.RuntimePatching.Tests/: Rasp.Instrumentation.RuntimePatching.Tests.csproj  RaspRuntimePatchingTests.cs  packages.lock.json
Rasp.Instrumentation.SystemTextJson.Tests/: Rasp.Instrumentation.SystemTextJson.Tests.csproj  RaspSystemTextJsonTests.cs  packages.lock.json
attack/: exploit_grpc.py  exploit_sqli_efcore.py  exploit_xss.py
docs/: ATTACK_SCENARIOS.md  CHEATSHEET.md  IMPLEMENTATION_PLAN.md  REVERSE_ENGINEERING.md  ROADMAP.md  good-first-issues-dotnet.md  good-first-issues.md
docs/ADR/: 001-composite-architecture.md  002-detection-engine-evolution.md  003-native-integrity-guard.md  005-xss-engine.md  (+7 more)
modules/: Directory.Build.props  nuget.config
scripts/: pack-local.ps1  pack-local.sh
src/: Directory.Build.props
src/Rasp.Native.Profiler/: CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  build.ps1
src/Rasp.Native.Profiler/SmokeTest/: Program.cs  SmokeTest.csproj
src/Rasp.Native.Profiler/src/: ClassFactory.cpp  ClassFactory.h  ILRewriter.cpp  ILRewriter.h  RaspProfiler.cpp  RaspProfiler.def  RaspProfiler.h  dllmain.cpp
(+127 files in other folders)
